[gd_scene load_steps=6 format=3 uid="uid://cicu1qk0jq20x"]

[ext_resource type="Script" path="res://menus/credits.gd" id="1_fns74"]
[ext_resource type="Texture2D" uid="uid://c81w0qa1xtdfl" path="res://data/2D assets/ui/MainMenu_Background.png" id="1_xlg2h"]
[ext_resource type="Theme" uid="uid://urbhhupy6a5l" path="res://data/2D assets/ui/Mainmenubutton.tres" id="3_dn5jh"]
[ext_resource type="AudioStream" uid="uid://cmoifrvi6ktca" path="res://data/audio_assets/sfx/ui_click_rollover_misc_15.wav" id="4_yo5bs"]
[ext_resource type="AudioStream" uid="uid://b13wfbea7coi6" path="res://data/audio_assets/sfx/ui_click_rollover_misc_16.wav" id="5_qpqy0"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fns74")

[node name="MainMenuBackground" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_xlg2h")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -238.0
offset_top = -500.0
offset_right = 238.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_dn5jh")
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Programmer:          "

[node name="Programer" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Programmer:"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Programmer:"

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Artist:"

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Artist:"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "blakestone95"
uri = "https://blakestone95.itch.io"

[node name="LinkButton2" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "craknain"
uri = "https://craknain.itch.io"

[node name="LinkButton3" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "TheBugMaker"
uri = "https://TheBugMaker.itch.io"

[node name="LinkButton4" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "omnistingray"
uri = "https://omnistingray.itch.io"

[node name="LinkButton5" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Jintessa"
uri = "https://Jintessa.itch.io"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 0
offset_left = 563.0
offset_top = 471.0
offset_right = 726.0
offset_bottom = 534.0
theme = ExtResource("3_dn5jh")
theme_override_font_sizes/font_size = 40
text = "GO BACK"

[node name="ButtonHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yo5bs")

[node name="ButtonSelect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qpqy0")

[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
